# LoreWeaver

./: .gitignore  README.md  build.bat  build.ps1  build.sh  devrun.bat  docker-compose.yml  electron-builder.yml  package-lock.json  package.json  release.bat  release.ps1  start-backend.ps1  start-frontend.ps1
.github/workflows/: build.yml
api/: .secret_key  alembic.ini  crypto.py  database.py  foliantica.spec  loreweaver.db  loreweaver.db-wal  loreweaver.spec  main.py  models.py  pyproject.toml  run.py  schemas.py
api/alembic/: env.py
api/routers/: achievements.py  acts.py  ai.py  analytics.py  chapters.py  codex.py  export.py  fragments.py  grammar.py  graph.py  images.py  imports.py  projects.py  research.py  scene_commands.py  scenes.py  settings.py  submissions.py  time.py
api/services/: export.py  importer.py  tags.py
api/templates/export/: latex_template.tex
docker/pandoc/: Dockerfile  main.py
electron/: main.js  preload.js  splash.html
electron/assets/: README.md  icon.backup.icns  icon.icns
scripts/: after-pack.cjs  generate-icons.mjs  package-lock.json  package.json
web/: .npmrc  next.config.mjs  package-lock.json  package.json
web/src/: middleware.ts  proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: AchievementIcon.tsx  AchievementToast.tsx  UIStoreSync.tsx
web/src/contexts/: EditorContext.tsx  LanguageContext.tsx  ThemeContext.tsx
web/src/hooks/: useAutosave.ts  useExport.ts
web/src/lib/: api.ts  i18n.ts  nameGenerator.ts  plotTemplates.ts  utils.ts
web/src/store/: colColors.ts  (+3 more)
(+65 files in other folders)
